beta warning z-index fix

--- a/src/BetaWarning.scss
+++ b/src/BetaWarning.scss
@@ -4,6 +4,7 @@
   min-height: 2rem !important;
   text-align: center;
   border-top: solid 1px #1A2939;
+  z-index: 10 !important;
 
   .container {
     min-height: 2rem !important;
